Name: attoparsec-binary
Version: 0.1
Author: Andrew Drake
Maintainer: adrake@adrake.org
Version: 0.1
Synopsis: Binary processing extensions to Attoparsec.

License: BSD3
License-file: LICENSE

Description: This package adds a collection of helper functions to make
 the task dealing with binary data of varying endianness from within an
 Attoparsec parser easier.

Category: Data
Build-type: Simple

Extra-source-files: README
Cabal-version: >=1.6

Source-Repository head
  Type: git
  Location: git://github.com/drakedevel/attoparsec-binary.git

Library
  Exposed-modules: Data.Attoparsec.Binary
  Build-depends: attoparsec, base == 4, bytestring
  GHC-Options: -Wall
